tests/machine/x/zig/group_by_multi_join_sort.error
Error on line 34: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/group_by_multi_join_sort.zig:34:130: error: expected type 'i32', found '*const [11:0]u8'
/tmp/zig-0.12.0/lib/std/hash_map.zig:551:38: note: parameter type declared here
/tmp/zig-0.12.0/lib/std/hash_map.zig:14:13: error: std.auto_hash.autoHash does not allow slices here ([]const u8) because the intent is unclear. Consider using std.StringHashMap for hashing the contents of []const u8. Alternatively, consider using std.auto_hash.hash or providing your own hash function instead.
/tmp/zig-0.12.0/lib/std/hash_map.zig:55:39: note: called from here

33: pub fn main() void {
34:     nation = &[_]std.AutoHashMap([]const u8, i32){blk0: { var m = std.AutoHashMap(i32, i32).init(std.heap.page_allocator); m.put("n_nationkey", 1) catch unreachable; m.put("n_name", "BRAZIL") catch unreachable; break :blk0 m; }};
35:     customer = &[_]std.AutoHashMap([]const u8, i32){blk1: { var m = std.AutoHashMap(i32, i32).init(std.heap.page_allocator); m.put("c_custkey", 1) catch unreachable; m.put("c_name", "Alice") catch unreachable; m.put("c_acctbal", 100) catch unreachable; m.put("c_nationkey", 1) catch unreachable; m.put("c_address", "123 St") catch unreachable; m.put("c_phone", "123-456") catch unreachable; m.put("c_comment", "Loyal") catch unreachable; break :blk1 m; }};
